fix: about us margin on mobile

--- a/src/features/about-us/Support/Support.module.css
+++ b/src/features/about-us/Support/Support.module.css
@@ -109,7 +109,7 @@
     }
 
     .iconWrapper {
-        margin-bottom: 5px;
+        margin-bottom: -40px;
     }
 }
 
